# SPR1D-GAME

./: CMakeLists.txt  main.c
dictionary/: custom.txt  default.txt
games/: biglie.c  biglie.h  blackjack.c  blackjack.h  bot_game.c  bot_game.h  dadi.c  dadi.h  impiccato.c  impiccato.h  indovina_numero.c  indovina_numero.h  morra_cinese.c  morra_cinese.h  murra.c  murra.h  pari_o_dispari.c  pari_o_dispari.h  ponte_di_vetro.c  ponte_di_vetro.h  tris.c  tris.h
utils/: common.c  common.h  file_manager.c  file_manager.h  scrematura.c  scrematura.h  shortcuts.c  shortcuts.h
